--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.1",
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.9.1",
+    "@reduxjs/toolkit": "^1.6.1",
     "clsx": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.17.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "react-use": "^17.3.1",
+    "yup": "^0.32.9"
   },
   "browserslist": {
     "production": [
